<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/products_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="1"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_cart_product" />

    <TextView
        android:id="@+id/total_price_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/total_price"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/products_recycler_view"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/egp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/egp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_semi_bold"
        app:layout_constraintTop_toBottomOf="@id/total_price_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_semi_bold"
        app:layout_constraintTop_toBottomOf="@id/total_price_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/egp"
        tools:text="2000"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/check_out"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="12dp"
        android:text="@string/check_out"
        android:textColor="@color/white"
        android:backgroundTint="@color/primary_color"
        android:background="@drawable/button_shape"
        android:drawableEnd="@drawable/ic_arrow_right"
        app:layout_constraintTop_toBottomOf="@id/products_recycler_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/total_price_tv"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>