<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.example.m_commerceapp.ui.fragments.profile.ProfileViewModel" />

    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/route"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/route"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/welcome"
            android:textSize="24sp"
            android:textColor="@color/primary_color"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/route"
            />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"
            android:text="@={vm.name}"
            android:textSize="24sp"
            android:textColor="@color/primary_color"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/welcome"
            app:layout_constraintTop_toBottomOf="@id/route"
            tools:text="Mohamed"
            />

        <TextView
            android:id="@+id/user_title_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@={vm.email}"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome"
            tools:text="Mohamed@gmail.com"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_gide_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".20" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/user_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="8dp"
            app:strokeColor="@color/gray"
            app:strokeWidth="1dp"
            app:cardCornerRadius="14dp"
            app:cardElevation="18dp"
            app:layout_constraintTop_toBottomOf="@id/top_gide_line">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <TextView
                    android:id="@+id/name_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    />


                <EditText
                    android:id="@+id/user_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:text="@={vm.name}"
                    android:textColor="@color/primary_color"
                    android:textSize="16sp"
                    android:gravity="center|start"
                    android:maxLines="1"
                    android:background="@drawable/edit_text_shape"
                    app:layout_constraintTop_toBottomOf="@+id/name_tv"
                    tools:text="Mohamed Ahmed Mahmoud"
                    style="@style/editTextFieldStyle"
                    />


                <TextView
                    android:id="@+id/email_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/user_full_name"
                    />


                <EditText
                    android:id="@+id/user_email"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:text="@={vm.email}"
                    android:textColor="@color/primary_color"
                    android:textSize="16sp"
                    android:gravity="center|start"
                    android:maxLines="1"
                    android:background="@drawable/edit_text_shape"
                    app:layout_constraintTop_toBottomOf="@id/email_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="Mohamed@gmail.com"
                    style="@style/editTextFieldStyle"
                    />

                <TextView
                    android:id="@+id/phone_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/phone"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/user_email"
                    />

                <EditText
                    android:id="@+id/user_phone"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:text="@={vm.phone}"
                    android:textColor="@color/primary_color"
                    android:textSize="16sp"
                    android:gravity="center|start"
                    android:maxLines="1"
                    android:background="@drawable/edit_text_shape"
                    app:layout_constraintTop_toBottomOf="@id/phone_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="01112256556"
                    style="@style/editTextFieldStyle"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="12dp"
                    android:gravity="start"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:backgroundTint="@color/primary_color"
                    app:layout_constraintEnd_toStartOf="@id/edit_btn"
                    app:layout_constraintTop_toBottomOf="@id/user_phone"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/edit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="start"
                    android:text="@string/edit"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:drawableEnd="@drawable/ic_edit"
                    android:backgroundTint="@color/primary_color"
                    app:layout_constraintTop_toBottomOf="@id/user_phone"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/upt_pass_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/change_password"
            android:textSize="16dp"
            android:drawableEnd="@drawable/ic_change"
            app:layout_constraintTop_toBottomOf="@id/user_info_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/upt_address_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/update_address"
            android:textSize="16dp"
            android:drawableEnd="@drawable/ic_home"
            android:drawableTint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/upt_pass_btn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/logout"
            android:textSize="16dp"
            android:drawableEnd="@drawable/ic_logout"
            android:drawableTint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/upt_address_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>