<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.example.m_commerceapp.ui.activities.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.login.LoginActivity">

        <ImageView
            android:id="@+id/route"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:src="@drawable/red_route"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/top_gide_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_gide_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".15" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textSize="26sp"
            android:textColor="@color/primary_color"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_gide_line"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/welcome">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                >
                <TextView
                    android:id="@+id/email_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                app:error="@{vm.emailError}"
                app:hintEnabled="false"
                app:endIconMode="clear_text"
                app:helperTextTextColor="@android:color/holo_red_dark"
                app:startIconDrawable="@drawable/ic_mail"
                app:layout_constraintTop_toBottomOf="@id/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:layout_marginBottom="8dp"
                    android:paddingStart="45dp"
                    android:paddingEnd="0dp"
                    android:text="@={vm.email}"
                    android:textSize="16sp"
                    android:textColor="@color/primary_color"
                    android:ems="10"
                    android:maxLines="1"
                    android:hint="Email"
                    android:background="@drawable/edit_text_shape"
                    app:endIconMode="clear_text"
                    style="@style/editTextFieldStyle"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/email_layout"
                >
                <TextView
                    android:id="@+id/pass_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:helperTextTextColor="@android:color/holo_red_dark"
                app:counterEnabled="true"
                app:counterMaxLength="16"
                app:counterTextColor="@color/black"
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/eye_selector"
                app:startIconDrawable="@drawable/ic_lock"
                app:error="@{vm.passwordError}"
                app:layout_constraintTop_toBottomOf="@id/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pass_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="45dp"
                    android:paddingEnd="0dp"
                    android:inputType="textPassword"
                    android:background="@drawable/edit_text_shape"
                    android:text="@={vm.password}"
                    android:textSize="16sp"
                    android:textColor="@color/primary_color"
                    android:ems="10"
                    android:maxLength="16"
                    android:hint="123456"
                    style="@style/textFieldLayoutStyle"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/forgot_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                app:layout_constraintTop_toBottomOf="@id/password_layout"
                >
                <TextView
                    android:id="@+id/forgot_pass_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:onClick="@{()->vm.login()}"
                app:layout_constraintTop_toBottomOf="@id/forgot_pass"
                style="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
                />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/primary_color"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forgot_pass" />

        </androidx.constraintlayout.widget.ConstraintLayout>

<!--        <LinearLayout-->
<!--            android:id="@+id/linearLogin"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="15dp"-->
<!--            android:gravity="center"-->
<!--            android:orientation="horizontal"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/login_layout">-->

<!--            <View-->
<!--                android:id="@+id/line1"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="1dp"-->
<!--                android:layout_weight="1"-->
<!--                android:background="@color/black" />-->

<!--            <TextView-->
<!--                android:id="@+id/tvOr"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:paddingStart="5dp"-->
<!--                android:paddingEnd="5dp"-->
<!--                android:text="OR"-->
<!--                android:textColor="@color/primary_color"-->
<!--                android:textSize="13sp" />-->

<!--            <View-->
<!--                android:id="@+id/line2"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="1dp"-->
<!--                android:layout_weight="1"-->
<!--                android:background="@color/black" />-->


<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:id="@+id/another_login_option_layout"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:orientation="horizontal"-->
<!--            android:gravity="center"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/linearLogin">-->

<!--            <androidx.appcompat.widget.AppCompatImageButton-->
<!--                android:id="@+id/login_facebook_btn"-->
<!--                android:layout_width="48dp"-->
<!--                android:layout_height="48dp"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginStart="20dp"-->
<!--                android:layout_marginEnd="20dp"-->
<!--                android:scaleType="centerInside"-->
<!--                android:src="@drawable/facebook_icon"-->
<!--                android:background="@drawable/button_logo_shape"-->
<!--                android:backgroundTint="@color/facebook_color"-->
<!--                />-->

<!--            <androidx.appcompat.widget.AppCompatImageButton-->
<!--                android:id="@+id/login_google_btn"-->
<!--                android:layout_width="58dp"-->
<!--                android:layout_height="58dp"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginStart="20dp"-->
<!--                android:layout_marginEnd="20dp"-->
<!--                android:scaleType="centerInside"-->
<!--                android:src="@drawable/ic_google"-->
<!--                android:background="@drawable/button_logo_shape"-->
<!--                />-->

<!--        </LinearLayout>-->


        <LinearLayout
            android:id="@+id/dont_have_account_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_layout"
            >
            <TextView
                android:id="@+id/dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/create_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/create_account"
                android:textColor="@color/primary_color"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:onClick="@{()->vm.navigateToRegister()}"
                />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>